[package]
name = "pkghist"
version = "0.0.1"
authors = ["Dennis Mellert <dennis.mellert@gmail.com>"]
edition = "2018"

[dependencies]
clap = "2"
chrono = "0"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lazy_static = "1"
itertools = "0"
uuid = { version = "0.7", features = ["v4"]}
filepath = "0"
log = "*"
fern = "*"