[package]
name = "pkghist"
description = "Query the local version history of packages"
version = "0.1.0"
authors = ["Dennis Mellert <dennis.mellert@gmail.com>"]
edition = "2018"
repository = "https://github.com/herzrasen/pkghist"
readme = "README.md"
keywords = ["pacman", "arch", "pkg"]
license-file = "LICENSE"
travis-ci = { repository = "herzrasen/pkghist", branch = "master" }
codecov = { repository = "herzrasen/pkghist", branch = "master", service = "github" }

[dependencies]
clap = "2"
termion = "*"
chrono = "0"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lazy_static = "1"
itertools = "0"
uuid = { version = "0.7", features = ["v4"]}
filepath = "0"
